release/accounts.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-accounts-v1-accountsservice
  labels:
    resourceType: api-service
  annotations:
    config: '{
      "expose": true,
      "path": "/accounts",
      "apiVersion": "v1",
      "authentication": {
        "required": "false"
      }
    }'
spec:
  ports:
  - name: grpc
    port: 5000
    targetPort: accounts-port
  selector: 
    app: accounts
  type: ClusterIP
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: accounts
  template: 
    metadata: 
      labels: 
        app: accounts
    spec:
      containers:
        - name: accounts
          image: registry.gitlab.com/isaiahwong/cluster/api/accounts
          imagePullPolicy: Always
          ports:
          - name: accounts-port
            containerPort: 5000

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 80m
              memory: 128Mi

          readinessProbe:
            exec:
              command: ["go/bin/grpc_health_probe-linux-amd64", "-addr=:5000"]
            initialDelaySeconds: 5

          livenessProbe:
            exec:
              command: ["/go/bin/grpc_health_probe-linux-amd64", "-addr=:5000"]
            initialDelaySeconds: 60
            
      imagePullSecrets:
      - name: gitlab-auth
