release/hydra-postgres.yaml
# Reason for subPath
# https://stackoverflow.com/questions/51168558/how-to-mount-a-postgresql-volume-using-aws-ebs-in-kubernete/51174380
apiVersion: v1
kind: Service
metadata:
  name: hydra-postgres-service
spec:
  ports:
  - name: tcp
    port: 5432
    targetPort: postgres-port
  selector: 
    component: hydra-postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra-postgres-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: hydra-postgres
  template:
    metadata:
      labels:
        component: hydra-postgres
    spec:
      containers:
        - name: hydra-postgres
          image: postgres:9.6
          ports:
            - name: postgres-port
              containerPort: 5432
          volumeMounts:
            - name: hydra-postgres-storage
              mountPath: /var/lib/postgresql/dat
              subPath: postgres
      volumes:
        - name: hydra-postgres-storage
          persistentVolumeClaim:
            claimName: hydra-postgres-pvc
