release/mongo-accounts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-accounts-service
spec:
  ports:
  - name: tcp
    port: 27017
    targetPort: mongo-port
  selector: 
    component: mongo-accounts
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-accounts-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: mongo-accounts
  template:
    metadata:
      labels:
        component: mongo-accounts
    spec:
      volumes:
        - name: mongo-accounts-storage
          persistentVolumeClaim:
            claimName: mongo-accounts-pvc
      containers:
        - name: mongo-accounts
          image: mongo
          ports:
            - name: mongo-port
              containerPort: 27017
          volumeMounts:
            - name: mongo-accounts-storage
              mountPath: /data/db
